test_outputs/connlist/anp_test3_pass_traffic_connlist_output.txt
0.0.0.0-255.255.255.255 => bar-ns/bar[Deployment] : All Connections
0.0.0.0-255.255.255.255 => foo-ns-1/foo[Deployment] : All Connections
0.0.0.0-255.255.255.255 => foo-ns-2/foo[Deployment] : All Connections
bar-ns/bar[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
bar-ns/bar[Deployment] => foo-ns-1/foo[Deployment] : All Connections
bar-ns/bar[Deployment] => foo-ns-2/foo[Deployment] : All Connections
foo-ns-1/foo[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
foo-ns-1/foo[Deployment] => bar-ns/bar[Deployment] : All Connections
foo-ns-1/foo[Deployment] => foo-ns-2/foo[Deployment] : All Connections
foo-ns-2/foo[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
foo-ns-2/foo[Deployment] => bar-ns/bar[Deployment] : All Connections
foo-ns-2/foo[Deployment] => foo-ns-1/foo[Deployment] : All Connections
